--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/mdfortino/Project-2#readme",
   "dependencies": {
     "express": "^4.16.4",
+    "hbs": "^4.0.1",
     "mongoose": "^5.4.7"
   },
   "devDependencies": {},
