test view displaying, need to fix User model issues

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "express": "^4.16.4",
     "hbs": "^4.0.1",
+    "method-override": "^3.0.0",
     "mongoose": "^5.4.7"
   },
   "devDependencies": {},
