--- a/package.json
+++ b/package.json
@@ -18,10 +18,17 @@
   "homepage": "https://github.com/mdfortino/Project-2#readme",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.18.3",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.3",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
+    "flash": "^1.1.0",
     "hbs": "^4.0.1",
     "method-override": "^3.0.0",
-    "mongoose": "^5.4.7"
+    "mongoose": "^5.4.7",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {},
   "keywords": []
