--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/mdfortino/Project-2#readme",
   "dependencies": {
+    "bcrypt": "^3.0.3",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
     "connect-flash": "^0.1.1",
@@ -25,8 +26,12 @@
     "express-session": "^1.15.6",
     "flash": "^1.1.0",
     "hbs": "^4.0.1",
+    "lodash": "^4.17.11",
     "method-override": "^3.0.0",
+    "mongo": "^0.1.0",
+    "mongodb": "^3.1.13",
     "mongoose": "^5.4.7",
+    "parser": "^0.1.4",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0"
   },
