--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "bcrypt": "^3.0.3",
     "bcrypt-nodejs": "0.0.3",
+    "body": "^5.1.0",
     "body-parser": "^1.18.3",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
@@ -28,8 +29,8 @@
     "hbs": "^4.0.1",
     "lodash": "^4.17.11",
     "method-override": "^3.0.0",
-    "mongo": "^0.1.0",
-    "mongodb": "^3.1.13",
+    // "mongo": "^0.1.0",
+    // "mongodb": "^3.1.13",
     "mongoose": "^5.4.7",
     "parser": "^0.1.4",
     "passport": "^0.4.0",
