--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "flash": "^1.1.0",
+    "handlebars": "^4.0.12",
     "hbs": "^4.0.1",
     "lodash": "^4.17.11",
     "method-override": "^3.0.0",
